--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,14 +6,14 @@
   padding: 16px 0;
   /* position: fixed; */
 }
-.fixed-nav{
+.fixed-nav {
   position: fixed;
   top: 0px;
   z-index: 2;
 }
 nav {
   max-width: 1250px;
-  
+
   height: 40px;
   margin: auto;
   color: white;
@@ -57,7 +57,7 @@ nav {
   padding: 14px;
   font-weight: 400;
   border-radius: 4px;
-  /* outline: none; */
+  color: black;
   outline-offset: 1px;
 }
 .search-box i {
@@ -95,9 +95,10 @@ nav {
   background-color: rgb(224, 221, 221);
   position: absolute;
   left: -110px;
+  height: 540px;
   padding: 20px;
   top: 57px;
-  height: auto;
+  overflow-y: scroll;
 }
 #dropdown-list {
   padding: 0;
@@ -134,7 +135,7 @@ nav {
   margin-right: 20px;
 }
 .second-navbar ul div:hover {
-  text-decoration: underline;
+  /* text-decoration: underline; */
   cursor: pointer;
 }
 .right-section a {
